[package]
name = "space-glow"
version = "0.0.0"
description = "Space Glow"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.14.1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.16"